# Welovepdf

./: .env.example  .gitignore  DEPLOY.md  DEPLOYMENT_AWS_GHARVANTA.md  DEPLOYMENT_AWS_PDFMOUNT.md  DEVELOPMENT.md  README.md  SUPER_PRODUCTION_READY_AUDIT_PROMPT.md  deploy.sh  index.html  output.docx  package-lock.json  package.json  prompt-audting.md  start.py  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
.welovepdf/.designrules/: ui-ux-rules.md
.welovepdf/.memory/: backend-engine.md  backend-roadmap.md  product-research.md
.welovepdf/.rules/: engineering-rules.md
Flutter/stitch_app/: pubspec.yaml
backend/: .env.example  Cargo.toml  README.md  welovepdf.db
backend/crates/pdf-api/: Cargo.toml
backend/crates/pdf-api/src/: files.rs  main.rs  payments.rs  state.rs
backend/scripts/: backup_db.py  check-native-tools.ps1  install-native-tools.ps1  pdf_processor.py  run-api.ps1  test_processors.py
model/: README.md
nginx/: pdfmount-nginx.conf  pdfmount-temp.conf
public/: ads.txt  manifest.json  robots.txt  sitemap.xml
scripts/: generate-seo.mts
seo-suite/: start.py
seo-suite/backend/: package-lock.json  package.json
seo-suite/frontend/: index.html  package-lock.json  package.json
src/: App.tsx  main.tsx
src/admin/: AdminDashboard.tsx
src/components/: AboutPage.tsx  AccountDrawer.tsx  AccountSettingsPage.tsx  AllToolsPage.tsx  ContactPage.tsx  ContactSalesPage.tsx  CookieBanner.tsx  FaqPage.tsx  Footer.tsx  Header.tsx  LandingPage.tsx  LoginModal.tsx  MetricStrip.tsx  PdfEditor.tsx  PricingPage.tsx  PrivacyPage.tsx  Sidebar.tsx  (+7 more)
(+365 files in other folders)
