[package]
name = "pdf-api"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
pdf-engine = { path = "../pdf-engine" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
serde_json = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }



